Archive2/8d/fca2ea54604829/output
main.cpp:1:33: error: template template parameter requires 'class' after the parameter list
template <template <typename E> T>
                                ^
                                class 
main.cpp:2:11: error: use of class template 'T' requires template arguments
void sort(T& container){ ... }
          ^
main.cpp:1:33: note: template is declared here
template <template <typename E> T>
          ~~~~~~~~~~~~~~~~~~~~~ ^
main.cpp:2:26: error: expected expression
void sort(T& container){ ... }
                         ^
3 errors generated.
