Archive2/8d/fca2ea54604829/main.cpp
template <template <typename E> T>
void sort(T& container){ ... }